5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4183/executions/1716_2495.log
== SUBMITION (2019-05-07 16:21:57) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repeticao
while (not num == -1):
	# Verifica se valor eh divisivel por 2
	if (CONDIÇÃO DE PARIDADE):
		mensagem = "PAR"
	else:
		mensagem = "IMPAR"
	
	print(mensagem)
	
	# Inputs seguintes
	num = int(input("Digite um numero: "))

-- EXECUTION TIME:
0.161991
-- ERROR:
  File "/home/codebench/codes/1716/2495/main.py", line 11
    if (CONDI\xc7\xc3O DE PARIDADE):
                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 16:22:54) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repeticao
while (not num == -1):
	# Verifica se valor eh divisivel por 2
	if (num % 2 == 0):
		mensagem = "PAR"
	else:
		mensagem = "IMPAR"
	
	print(mensagem)
	
	# Inputs seguintes
	num = int(input("Digite um numero: "))

-- OUTPUT:
PAR
PAR
PAR
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-07 16:23:16) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repeticao
while (not num == -1):
	# Verifica se valor eh divisivel por 2
	if (num % 2 == 0):
		mensagem = "PAR"
	else:
		mensagem = "IMPAR"
	
	print(mensagem)
	
	# Inputs seguintes
	num = int(input("Digite um numero: "))

-- EXECUTION TIME:
0.206929
-- TEST CASE 1:
---- input:
0
22
44
-1
---- correct output:
PAR
PAR
PAR
---- user output:
PAR
PAR
PAR
-- TEST CASE 2:
---- input:
1
33
55
777
9999
-1
---- correct output:
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
---- user output:
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
-- TEST CASE 3:
---- input:
10528
4999
123
45
6
-1
---- correct output:
PAR
IMPAR
IMPAR
IMPAR
PAR
---- user output:
PAR
IMPAR
IMPAR
IMPAR
PAR
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 06:27:05) 
-- CODE:
num = int(input("Digite um numero: "))
while (not num == -1):
   if (num % 2 == 0):
      mensagem = "PAR"
   else:
      mensagem = "IMPAR"
   print(mensagem)
   


-- EXECUTION TIME:
116.902
-- TEST CASE 1:
---- input:
0
22
44
-1
---- correct output:
PAR
PAR
PAR
---- user output:
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
PAR
-- TEST CASE 2:
---- input:
1
33
55
777
9999
-1
---- correct output:
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- TEST CASE 3:
---- input:
10528
4999
123
45
6
-1
---- correct output:
PAR
IMPAR
IMPAR
IMPAR
PAR
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 01:22:58) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repeticao
while (num != 1):
	# Verifica se valor eh divisivel por 2
	if (num% 2 == 0):
		mensagem = "PAR"
	else:
		mensagem = "IMPAR"
	
	print(mensagem)
	
	# Inputs seguintes
	num = int(input("Digite um numero: "))
   


-- EXECUTION TIME:
0.827525
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2495/main.py", line 19, in <module>
    num = int(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 01:23:08) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repeticao
while (num != -1):
	# Verifica se valor eh divisivel por 2
	if (num% 2 == 0):
		mensagem = "PAR"
	else:
		mensagem = "IMPAR"
	
	print(mensagem)
	
	# Inputs seguintes
	num = int(input("Digite um numero: "))
   


-- OUTPUT:
PAR
PAR
PAR
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 01:23:14) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: "))

# Laco de repeticao
while (num != -1):
	# Verifica se valor eh divisivel por 2
	if (num% 2 == 0):
		mensagem = "PAR"
	else:
		mensagem = "IMPAR"
	
	print(mensagem)
	
	# Inputs seguintes
	num = int(input("Digite um numero: "))
   


-- EXECUTION TIME:
0.795715
-- TEST CASE 1:
---- input:
0
22
44
-1
---- correct output:
PAR
PAR
PAR
---- user output:
PAR
PAR
PAR
-- TEST CASE 2:
---- input:
1
33
55
777
9999
-1
---- correct output:
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
---- user output:
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
-- TEST CASE 3:
---- input:
10528
4999
123
45
6
-1
---- correct output:
PAR
IMPAR
IMPAR
IMPAR
PAR
---- user output:
PAR
IMPAR
IMPAR
IMPAR
PAR
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
